--- a/home.html
+++ b/home.html
@@ -7,9 +7,16 @@
     </head>
     <body>
         <h1>My Tools</h1>
-        <button onclick="functionNotYetImplemented() 
+
+        <button onclick="functionNotFullyImplemented() 
             {window.location.href = 'aimroutinecounter.html'; }">
             Aim Routine Counter
         </button>
+
+        <button onclick="functionNotYetImplemented() 
+            {window.location.href = 'workoutcounter.html'; }">
+            Workout Counter
+        </button>
+
     </body>
 </html>
