--- a/workoutcounter.html
+++ b/workoutcounter.html
@@ -6,23 +6,25 @@
         <title>Tools</title>
     </head>
     <body>
-        <h1>Aim Routine Counters!</h1>
+        <h1>Workout Counters!</h1>
 
+        <!-- NOT YET IMPLEMENTED -->
         <div class="grid-container">
             <div class="counter-card">
-                <h2>Sixshot Ultimate</h2>
-                <h2 id="sixShotCounter">Counter: 0</h2>
+                <h2>Pushups</h2>
+                <h2 id="pushUpsCounter">Counter: 0</h2>
                 <button onclick="aimIncrementCounter(1)">Count up</button>
                 <button onclick="aimDecrementCounter(1)">Count down</button>
             </div>
 
             <div class="counter-card">
-                <h2>Gridshot Ultimate</h2>
+                <h2>Sit Ups</h2>
                 <h2 id="gridShotCounter">Counter: 0</h2>
-                <button onclick="aimIncrementCounter(2)">Count up</button>
+                <button onclick="aimIncrementCounter(2)">Count up</button> 
                 <button onclick="aimDecrementCounter(2)">Count down</button>
             </div>
         </div>
+        <!-- -->
 
         <button onclick="window.location.href = 'home.html';">
             Back
