Added Valorant Webpage

--- a/aimroutinecounter.html
+++ b/aimroutinecounter.html
@@ -14,6 +14,7 @@
                 <h2 id="sixShotCounter">Counter: 0</h2>
                 <button onclick="aimIncrementCounter(1)">Count up</button>
                 <button onclick="aimDecrementCounter(1)">Count down</button>
+                <button onclick="aimResetCounter(1)">Reset</button>
             </div>
 
             <div class="counter-card">
@@ -21,6 +22,7 @@
                 <h2 id="gridShotCounter">Counter: 0</h2>
                 <button onclick="aimIncrementCounter(2)">Count up</button>
                 <button onclick="aimDecrementCounter(2)">Count down</button>
+                <button onclick="aimResetCounter(2)">Reset</button>
             </div>
         </div>
 
