--- a/home.html
+++ b/home.html
@@ -6,17 +6,34 @@
         <title>Tools</title>
     </head>
     <body>
+
+        <header onclick="querySelectorExample()">Johnny's Tools</header>
+
         <h1>My Tools</h1>
+        
+        <div>
+            <button onclick="{window.location.href = 'aimroutinecounter.html'; }">
+                Aim Routine Counter
+            </button>
+        </div>
 
-        <button onclick="functionNotFullyImplemented() 
-            {window.location.href = 'aimroutinecounter.html'; }">
-            Aim Routine Counter
-        </button>
+        <h1>Others</h1>
 
-        <button onclick="functionNotYetImplemented() 
-            {window.location.href = 'workoutcounter.html'; }">
-            Workout Counter
-        </button>
+        <div>
+            <button onclick="workInProgress()
+                {window.location.href = 'My Valorant Webpage/homepage.html'; }">
+                Valorant Web Page
+            </button>
+        </div>
+
+        <h1>Currently Testing</h1>
+
+        <div>
+            <button onclick="functionNotYetImplemented() 
+                {window.location.href = 'workoutcounter.html'; }">
+                Workout Counter
+            </button>
+        </div>
 
     </body>
 </html>
