Added Currency Exchange

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 
         <h1>My Tools</h1>
         
+        <!-- AIM ROUTINE COUNTER -->
         <div>
             <button onclick="{window.location.href = 'aimroutinecounter.html'; }">
                 Aim Routine Counter
@@ -19,6 +20,7 @@
 
         <h1>Others</h1>
 
+        <!-- VALORANT WEBPAGE -->
         <div>
             <button onclick="workInProgress()
                 {window.location.href = 'My Valorant Webpage/homepage.html'; }">
@@ -28,10 +30,19 @@
 
         <h1>Currently Testing</h1>
 
+        <!-- WORKOUT COUNTER -->
         <div>
             <button onclick="functionNotYetImplemented() 
                 {window.location.href = 'workoutcounter.html'; }">
                 Workout Counter
+            </button>
+        </div>
+
+        <!-- CURRENCY EXCHANGE -->
+        <div>
+            <button onclick="functionNotYetImplemented() 
+                {window.location.href = 'Currency/currency.html'; }">
+                Currency Exchange
             </button>
         </div>
 
