--- a/home.html
+++ b/home.html
@@ -41,8 +41,8 @@
         <!-- CURRENCY EXCHANGE -->
         <div>
             <button onclick="functionNotYetImplemented() 
-                {window.location.href = 'Currency/currency.html'; }">
-                Currency Exchange
+                {window.location.href = 'ValorantAgents/agents.html'; }">
+                Valorant Agents
             </button>
         </div>
 
