Small Changes - added description

--- a/ValorantAgents/agents.html
+++ b/ValorantAgents/agents.html
@@ -10,7 +10,7 @@
 
         <header onclick="querySelectorExample()">Johnny's Tools</header>
 
-        <label for="id">Agent ID</label>
+        <h1>Ability</h1>
 
     </body>
 </html>
