Added back button

--- a/ValorantAgents/agents.html
+++ b/ValorantAgents/agents.html
@@ -12,5 +12,9 @@
 
         <h1>Ability</h1>
 
+        <button onclick="window.location.href = '../home.html';">
+            Back
+        </button>
+
     </body>
 </html>
