added useless input

--- a/ValorantAgents/agents.html
+++ b/ValorantAgents/agents.html
@@ -12,6 +12,11 @@
 
         <h1>Ability</h1>
 
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </form>
+
         <button onclick="window.location.href = '../home.html';">
             Back
         </button>
