--- a/My Valorant Webpage/homepage.html
+++ b/My Valorant Webpage/homepage.html
@@ -11,34 +11,26 @@
 		<header>JchnnyVAL</header>
 
 		<main>
-			<div class="grid-container2">
+			<div class="grid-container1">
 				<div class="counter-card">
-					<h1><span class="topics">Player Info</span></h1>
-					
-						<button onclick="window.open('https://tracker.gg/valorant/profile/riot/jchnny%23mmm/overview')">Valorant Tracker</button>
-						<button onclick="window.open('https://www.thespike.gg/player/jchnny/47367')">Spike Page</button>
-						<button onclick="window.open('https://www.vlr.gg/player/28376/jchnny')">VLR</button>
 
-					
-					<h2><span class="topics">Previous Teams:</span></h2>
+					<!-- PLAYER INFO -->
+					<h1>Player Info</h1>
+					<button onclick="window.open('https://tracker.gg/valorant/profile/riot/jchnny%23mmm/overview')">Valorant Tracker</button>
+					<button onclick="window.open('https://www.thespike.gg/player/jchnny/47367')">Spike Page</button>
+					<button onclick="window.open('https://www.vlr.gg/player/28376/jchnny')">VLR</button>
+
+					<!-- VODS BUTTON -->
+					<h2>VODS</h2>
+					<button onclick="window.open('scrimvods.html')">Scrim VODS</button>
+
+					<!-- PREVIOUS TEAMS -->
+					<h2>Previous Teams:</h2>
 					<a href="https://www.thespike.gg/team/aerial-black/12571"><img alt="Aerial Black" src="images/aerialBlack.png" width="100" height="100"></a>
 					<a href="https://www.thespike.gg/team/skull-emoji-x7/14760"><img alt="Skull Emoji x7" src="images/x7.png" width="100" height="100"></a>
+					<a href="https://www.thespike.gg/team/yacht-club/14462"><img alt="Yacht Club" src="images/yc.png" width="100" height="100"></a>
 				</div>
 			</div>
-
-		</span>
-
-
-		<nav>
-		<span class="rightSide"><ul>
-			<li><a href="scrimvods.html">Scrim VODS</a></li>
-			<li><a href="tourneyvods.html">Tourney VODS</a></li>
-			<li><a href="scrimrecords.html">Scrim Records</a></li>
-			<li><a href="tourneyrecords.html">Tourney Records</a></li>
-		</ul>
-		</span>
-		</nav>
-
 		</main>
 
 		<button onclick="window.location.href = '../home.html';">
