--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <!-- AIM ROUTINE COUNTER -->
         <div>
             <button onclick="{window.location.href = 'aimroutinecounter.html'; }">
-                Aim Routine Counter
+                Aim Routine Counter (JS Counter)
             </button>
         </div>
 
@@ -24,25 +24,25 @@
         <div>
             <button onclick="workInProgress()
                 {window.location.href = 'My Valorant Webpage/homepage.html'; }">
-                Valorant Web Page
+                Valorant Web Page (HTML + CSS)
             </button>
         </div>
 
-        <h1>Currently Testing</h1>
+        <!-- VALORANT AGENTS API -->
+        <div>
+            <button onclick="functionNotYetImplemented() 
+                {window.location.href = 'ValorantAgents/agents.html'; }">
+                Valorant Agents (JS API)
+            </button>
+        </div>
+
+        <h1>Absolutely Useless</h1>
 
         <!-- WORKOUT COUNTER -->
         <div>
             <button onclick="functionNotYetImplemented() 
                 {window.location.href = 'workoutcounter.html'; }">
                 Workout Counter
-            </button>
-        </div>
-
-        <!-- CURRENCY EXCHANGE -->
-        <div>
-            <button onclick="functionNotYetImplemented() 
-                {window.location.href = 'ValorantAgents/agents.html'; }">
-                Valorant Agents
             </button>
         </div>
 
