--- a/My Valorant Webpage/homepage.html
+++ b/My Valorant Webpage/homepage.html
@@ -22,18 +22,21 @@
 
 					<!-- VODS BUTTON -->
 					<h2>VODS</h2>
-					<button onclick="window.open('scrimvods.html')">Scrim VODS</button>
+					<button onclick="{window.location.href = 'scrimvods.html'}">Scrim VODS</button>
 
 					<!-- PREVIOUS TEAMS -->
 					<h2>Previous Teams:</h2>
-					<a href="https://www.thespike.gg/team/aerial-black/12571"><img alt="Aerial Black" src="images/aerialBlack.png" width="100" height="100"></a>
+					<div class="counter-card2">
+						<a href="https://www.thespike.gg/team/aerial-black/12571"><img alt="Aerial Black" src="images/aerialBlack.png" width="100" height="100"></a>
+						<h3>Aerial Black</h3>
+					</div>
 					<a href="https://www.thespike.gg/team/skull-emoji-x7/14760"><img alt="Skull Emoji x7" src="images/x7.png" width="100" height="100"></a>
 					<a href="https://www.thespike.gg/team/yacht-club/14462"><img alt="Yacht Club" src="images/yc.png" width="100" height="100"></a>
 				</div>
 			</div>
 		</main>
 
-		<button onclick="window.location.href = '../home.html';">
+		<button onclick="{window.location.href = '../home.html';}">
             Back
         </button>
 	</body>
