--- a/My Valorant Webpage/scrimvods.html
+++ b/My Valorant Webpage/scrimvods.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<link rel="stylesheet" type="text/css" href="my website properties.css">
-<title>jchnny VODS</title>
-<meta charset="UTF-8">
+<head>
+	<link rel="stylesheet" type="text/css" href="my website properties.css">
+	<title>jchnny VODS</title>
+	<meta charset="UTF-8">
+</head>
 
 <body>
 	<header>
@@ -105,5 +106,9 @@
 		Opponent: NIX<br>
 		Map: Ascent</p>
 	<iframe width="640" height="360" src="https://www.youtube.com/embed/erhv-5Iq0VM"></iframe>
+
+	</main>
+	</body>
+	</html>
 
 	
