--- a/home.html
+++ b/home.html
@@ -22,8 +22,7 @@
 
         <!-- VALORANT WEBPAGE -->
         <div>
-            <button onclick="workInProgress()
-                {window.location.href = 'My Valorant Webpage/homepage.html'; }">
+            <button onclick="{window.location.href = 'My Valorant Webpage/homepage.html'; }">
                 Valorant Web Page (HTML + CSS)
             </button>
         </div>
